Setup auth with email and password and style auth page.

--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -1,5 +1,15 @@
 .group {
   display: flex;
   flex-direction: column;
-  width: 25%;
+  border-bottom: 1px solid black;
+
+  input {
+    outline: none;
+    border: 0px;
+    font-size: 1.2rem;
+  }
+
+  input[type='password'] {
+    letter-spacing: 3px;
+  }
 }
