--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
 
 input {
   background-color: transparent;
-  font-family: var(--main-font)
+  font-family: var(--main-font);
 }
 
 button {
