--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -3,12 +3,13 @@
   padding: 10px;
   border: none;
   transition: 0.1s linear;
-  width: 49%;
+  width: 100%;
   background-color: lightgrey;
   color: black;
-
+  background: none;
   border-radius: 5px;
   font-weight: 600;
+  cursor: pointer;
 
   &:hover {
     background-color: black;
@@ -16,7 +17,6 @@
   }
 
   &.google-sign-in {
-    width: 49%;
     background-color: dodgerblue;
     color: white;
 
@@ -27,6 +27,62 @@
       background-color: blue;
     }
   }
+
+  &.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    cursor: pointer;
+
+    &:hover .logo {
+      stroke: black;
+      fill: black;
+      transition: none;
+    }
+  }
+
+  &.sign-in {
+    background-color: #4c6ef5;
+    color: white;
+    transition: 0.1s;
+    cursor: pointer;
+
+    &:hover,
+    &:active {
+      background-color: #364fc7;
+      transition: none;
+    }
+  }
+
+  &.sign-up {
+    background-color: #edf2ff;
+    color: black;
+    transition: 0.1s;
+    cursor: pointer;
+
+    &:hover,
+    &:active {
+      background-color: #dbe4ff;
+      transition: none;
+    }
+  }
+
+  &.primary {
+    background-color: #4057af;
+    color: white;
+
+    &:hover {
+      background-color: #374a96;
+    }
+  }
+
+  &.secondary {
+    background-color: #becbfd;
+
+    &:hover {
+      color: black;
+      background-color: #ced8fe;
+    }
+  }
 }
-
-
