--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,5 +1,4 @@
 .home-page-container {
-  position: absolute;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -7,6 +6,7 @@
   margin-top: 20vh;
   height: 20vh;
   justify-content: space-between;
+  gap: 80px;
 
   .buttons-container {
     display: flex;
@@ -14,19 +14,10 @@
     width: 30%;
   }
 
-  h1 {
-    animation: levitate 2s ease-in-out infinite;
-  }
-
-  @keyframes levitate {
-    0% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-10px);
-    }
-    100% {
-      transform: translateY(0);
-    }
+  .cards-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 24px;
   }
 }
