--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 96px;
+  padding: 0 8px;
 
   .links-container {
     display: flex;
