--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,11 @@
-:root {
-  --main-bg-color: #f3f4f6;
-  --main-font: 'Quicksand', sans-serif;
-}
-
 * {
   margin: 0px;
   padding: 0px;
 }
 
 body {
-  background-color: var(--main-bg-color);
-  font-family: var(--main-font);
+  background-color: #f3f4f6;
+  font-family: 'Open Sans', sans-serif;
 }
 
 ::-webkit-scrollbar {
