--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,9 +1,9 @@
 .home-page-container {
-  width: 100%;
+  max-width: 1200px;
+  margin: 100px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20vh;
   height: 20vh;
   justify-content: space-between;
   gap: 80px;
@@ -11,7 +11,11 @@
   .buttons-container {
     display: flex;
     justify-content: space-between;
-    width: 30%;
+    width: 300px;
+
+    .icon {
+      width: 24px;
+    }
   }
 
   .cards-container {
