Partial setup i18n and add requests and some logic.

--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -162,4 +162,16 @@
       color: #dee5fe;
     }
   }
+
+  &.language {
+    justify-content: flex-start;
+    border: none;
+    color: #121932;
+    padding: 4px 8px;
+
+    &:hover,
+    &:active {
+      background-color: #dee5fe;
+    }
+  }
 }
