Setup i18n, bug fix, add REST logic and UI&UX features.

--- a/src/routes/authentication/authentication.component.styles.scss
+++ b/src/routes/authentication/authentication.component.styles.scss
@@ -1,8 +1,8 @@
 .authentication-container {
   display: flex;
   justify-content: space-around;
-  margin: 200px;
   transition: 0.1s linear;
+  position: relative;
 }
 
 @media screen and (max-width: 720px) {
