--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -1,9 +1,8 @@
 .button-container {
   font-size: 1.1rem;
-  padding: 10px;
+  padding: 8px;
   border: none;
   transition: 0.1s linear;
-  width: 100%;
   background-color: lightgrey;
   color: black;
   background: none;
@@ -28,14 +27,15 @@
   }
 
   &.google-sign-in {
-    background-color: dodgerblue;
+    background-color: #5c7cfa;
     color: white;
+    border: none;
 
     border-radius: 5px;
     font-weight: 600;
 
     &:hover {
-      background-color: blue;
+      background-color: #5370e1;
     }
   }
 
@@ -89,6 +89,12 @@
 
     &:hover {
       background-color: #374a96;
+    }
+
+    &.lock {
+      cursor: not-allowed;
+      pointer-events: none;
+      opacity: 50%;
     }
   }
 
@@ -173,5 +179,13 @@
     &:active {
       background-color: #dee5fe;
     }
+  }
+
+  &.w50 {
+    width: 50%;
+  }
+
+  &.w100 {
+    width: 100%;
   }
 }
