--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -1,14 +1,20 @@
 .sign-in-container {
   width: 30%;
+  margin-top: 96px;
 
   .group {
     margin: 40px 0px;
+  }
+
+  .error-container {
+    color: red;
   }
 
   .buttons-container {
     display: flex;
     justify-content: space-between;
     margin-top: 40px;
+    gap: 24px;
   }
 }
 
