--- a/src/components/sign-up-form/sign-up-form.styles.scss
+++ b/src/components/sign-up-form/sign-up-form.styles.scss
@@ -1,8 +1,14 @@
 .sign-up-container {
   width: 30%;
+  margin-top: 96px;
 
   .group {
     margin: 40px 0px;
+  }
+
+  .error {
+    font-size: 18px;
+    color: red;
   }
 
   .buttons-container {
@@ -15,5 +21,5 @@
 @media screen and (max-width: 720px) {
   .sign-up-container {
     width: 100%;
-  };
+  }
 }
